--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,6 +20,15 @@ DirectoryIndex index.php
 Redirect 301 /duos-accordeon-voix http://www.jeremy-dutheil.fr/collaborations-artistiques
 Redirect 301 /groupes http://www.jeremy-dutheil.fr/collaborations-artistiques
 Redirect 301 /integrer-sass-compass-projet-symfony2 http://www.jeremy-dutheil.fr
+Redirect 301 /animations_seniors.html http://www.jeremy-dutheil.fr
+Redirect 301 /arc/node/49 http://www.jeremy-dutheil.fr
+Redirect 301 /barconniere/pages/locate http://www.jeremy-dutheil.fr
+Redirect 301 /page/projects http://www.jeremy-dutheil.fr
+Redirect 301 /project/kierszbaum-interieurs http://www.jeremy-dutheil.fr
+Redirect 301 /sld http://www.jeremy-dutheil.fr
+Redirect 301 /tag/image http://www.jeremy-dutheil.fr
+Redirect 301 /tag/tips http://www.jeremy-dutheil.fr
+Redirect 301 /un-champ-dadresse-avec-auto-completion-grace-google-maps-api http://www.jeremy-dutheil.fr
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
