--- a/public/.htaccess
+++ b/public/.htaccess
@@ -70,3 +70,15 @@ Redirect 301 /integrer-sass-compass-projet-symfony2 http://www.jeremy-dutheil.fr
         # RedirectTemp cannot be used instead
     </IfModule>
 </IfModule>
+
+# BEGIN WordPress
+<IfModule mod_rewrite.c>
+RewriteEngine On
+RewriteBase /
+RewriteRule ^index\.php$ - [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /index.php [L]
+</IfModule>
+
+# END WordPress
