--- a/public/.htaccess
+++ b/public/.htaccess
@@ -35,6 +35,10 @@ Redirect 301 /tarif-groupe-musique-soiree https://www.jeremy-dutheil.fr/blog/que
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
+RewriteCond %{SERVER_PORT} 80
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+
     # Determine the RewriteBase automatically and set it as environment variable.
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
