--- a/public/.htaccess
+++ b/public/.htaccess
@@ -31,6 +31,7 @@ Redirect 301 /tag/tips https://www.jeremy-dutheil.fr
 Redirect 301 /un-champ-dadresse-avec-auto-completion-grace-google-maps-api https://www.jeremy-dutheil.fr
 Redirect 301 /barconniere https://www.jeremy-dutheil.fr
 Redirect 301 /tarif-groupe-musique-soiree https://www.jeremy-dutheil.fr/blog/quel-est-le-tarif-dun-groupe-de-musique-pour-votre-soiree/
+Redirect 301 /animations-mariages https://www.jeremy-dutheil.fr/accordeoniste-mariage
 
 
 # Referrer
