--- a/public/.htaccess
+++ b/public/.htaccess
@@ -32,7 +32,7 @@ Redirect 301 /un-champ-dadresse-avec-auto-completion-grace-google-maps-api https
 Redirect 301 /barconniere https://www.jeremy-dutheil.fr
 Redirect 301 /tarif-groupe-musique-soiree https://www.jeremy-dutheil.fr/blog/quel-est-le-tarif-dun-groupe-de-musique-pour-votre-soiree/
 Redirect 301 /animations-mariages https://www.jeremy-dutheil.fr/accordeoniste-mariages
-
+Redirect 301 /accordeoniste https://www.jeremy-dutheil.fr
 
 
 # Referrer
