--- a/public/.htaccess
+++ b/public/.htaccess
@@ -115,6 +115,15 @@ mod_gzip_item_exclude mime ^image/.*
 mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 </IfModule>
 
+ExpiresActive On
+ExpiresByType image/gif "access 1 month"
+ExpiresByType image/jpg "access 1 month"
+ExpiresByType image/jpeg "access 1 month"
+ExpiresByType image/png "access 1 month"
+ExpiresByType text/css "access 1 month"
+ExpiresByType text/js "access 1 week"
+ExpiresByType application/javascript "access 1 week"
+
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
