--- a/public/.htaccess
+++ b/public/.htaccess
@@ -33,6 +33,9 @@ Redirect 301 /barconniere https://www.jeremy-dutheil.fr
 Redirect 301 /tarif-groupe-musique-soiree https://www.jeremy-dutheil.fr/blog/quel-est-le-tarif-dun-groupe-de-musique-pour-votre-soiree/
 Redirect 301 /animations-mariages https://www.jeremy-dutheil.fr/accordeoniste-mariages
 Redirect 301 /accordeoniste https://www.jeremy-dutheil.fr
+Redirect 301 /accordeoniste-melun https://www.jeremy-dutheil.fr
+Redirect 301 /accordeoniste-fontainebleau https://www.jeremy-dutheil.fr
+Redirect 301 /accordeoniste-meaux https://www.jeremy-dutheil.fr
 Redirect 301 /mime https://www.jeremy-dutheil.fr/collaborations-artistiques#mime
 Redirect 301 /marie-petrolette https://www.jeremy-dutheil.fr/collaborations-artistiques#marie
 Redirect 301 /ruelamome https://www.jeremy-dutheil.fr/collaborations-artistiques#ruelamome
