--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.28.2",
         "core-js": "^3.0.0",
+        "glob-all": "^3.2.1",
         "jquery": "^3.4.1",
         "node-sass": "^4.13.1",
+        "purify-css": "^1.2.5",
+        "purifycss-webpack": "^0.7.0",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^7.0.1",
         "webpack-notifier": "^1.6.0"
@@ -22,6 +25,7 @@
         "font-awesome": "^4.7.0",
         "fontawesome": "^5.6.3",
         "popper": "^1.0.1",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "purgecss-webpack-plugin": "^2.1.0"
     }
 }
