--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "glob-all": "^3.2.1",
         "jquery": "^3.4.1",
         "node-sass": "^4.13.1",
+        "path": "^0.12.7",
+        "purgecss-webpack-plugin": "^2.1.0",
         "purify-css": "^1.2.5",
         "purifycss-webpack": "^0.7.0",
         "regenerator-runtime": "^0.13.2",
@@ -25,7 +27,6 @@
         "font-awesome": "^4.7.0",
         "fontawesome": "^5.6.3",
         "popper": "^1.0.1",
-        "popper.js": "^1.16.1",
-        "purgecss-webpack-plugin": "^2.1.0"
+        "popper.js": "^1.16.1"
     }
 }
