--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^4.4.1",
         "font-awesome": "^4.7.0",
         "fontawesome": "^5.6.3",
+        "lazysizes": "^5.2.0",
         "popper": "^1.0.1",
         "popper.js": "^1.16.1"
     }
