--- a/public/.htaccess
+++ b/public/.htaccess
@@ -121,27 +121,19 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
 <IfModule mod_expires.c>
           ExpiresActive on
 
-          ExpiresByType image/jpg "access plus 60 days"
-          ExpiresByType image/png "access plus 60 days"
-          ExpiresByType image/gif "access plus 60 days"
-          ExpiresByType image/jpeg "access plus 60 days"
+          ExpiresByType image/jpg "access plus 1 year"
+          ExpiresByType image/png "access plus 1 year"
+          ExpiresByType image/gif "access plus 1 year"
+          ExpiresByType image/jpeg "access plus 1 year"
+          ExpiresByType image/webp "access plus 1 year"
 
-          ExpiresByType text/css "access plus 1 days"
+          ExpiresByType text/css "access plus 1 year"
 
-          ExpiresByType image/x-icon "access plus 1 month"
+          ExpiresByType image/x-icon "access plus 1 year"
 
-          ExpiresByType application/pdf "access plus 1 month"
-          ExpiresByType audio/x-wav "access plus 1 month"
-          ExpiresByType audio/mpeg "access plus 1 month"
-          ExpiresByType video/mpeg "access plus 1 month"
-          ExpiresByType video/mp4 "access plus 1 month"
-          ExpiresByType video/quicktime "access plus 1 month"
-          ExpiresByType video/x-ms-wmv "access plus 1 month"
-          ExpiresByType application/x-shockwave-flash "access 1 month"
-
-          ExpiresByType text/javascript "access plus 1 week"
-          ExpiresByType application/x-javascript "access plus 1 week"
-          ExpiresByType application/javascript "access plus 1 week"
+          ExpiresByType text/javascript "access plus 1 year"
+          ExpiresByType application/x-javascript "access plus 1 year"
+          ExpiresByType application/javascript "access plus 1 year"
 </IfModule>
 
 # BEGIN WordPress
