--- a/public/.htaccess
+++ b/public/.htaccess
@@ -134,6 +134,25 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
           ExpiresByType text/javascript "access plus 1 year"
           ExpiresByType application/x-javascript "access plus 1 year"
           ExpiresByType application/javascript "access plus 1 year"
+
+          # Add correct content-type for fonts
+            AddType application/vnd.ms-fontobject .eot
+            AddType font/ttf .ttf
+            AddType font/otf .otf
+            AddType font/woff .woff
+            AddType font/woff2 .woff2
+            AddType image/svg+xml .svg
+
+            # Compress compressible fonts
+            AddOutputFilterByType DEFLATE font/ttf font/otf image/svg+xml
+
+            # Add a far future Expires header for fonts
+            ExpiresByType application/vnd.ms-fontobject "access plus 1 year"
+            ExpiresByType font/ttf "access plus 1 year"
+            ExpiresByType font/otf "access plus 1 year"
+            ExpiresByType font/woff "access plus 1 year"
+            ExpiresByType font/woff2 "access plus 1 year"
+            ExpiresByType image/svg+xml "access plus 1 year"
 </IfModule>
 
 # BEGIN WordPress
