--- a/public/.htaccess
+++ b/public/.htaccess
@@ -132,6 +132,7 @@ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
           ExpiresByType image/x-icon "access plus 1 year"
 
           ExpiresByType text/javascript "access plus 1 year"
+          ExpiresByType text/js "access plus 1 year"
           ExpiresByType application/x-javascript "access plus 1 year"
           ExpiresByType application/javascript "access plus 1 year"
 
