--- a/public/.htaccess
+++ b/public/.htaccess
@@ -43,6 +43,8 @@ Redirect 301 /madjid-yano-tet https://www.jeremy-dutheil.fr/collaborations-artis
 Redirect 301 /la-marquise https://www.jeremy-dutheil.fr/collaborations-artistiques#marquise
 Redirect 301 /elena-josse https://www.jeremy-dutheil.fr/collaborations-artistiques#elena
 Redirect 301 /les-fils-de-flute https://www.jeremy-dutheil.fr/collaborations-artistiques#fdf
+Redirect 301 /animations-seniors-seine-et-marne /animations
+Redirect 301 /soirees-paris /accordeoniste-soiree
 
 
 # Referrer
